--- a/contactus.html
+++ b/contactus.html
@@ -20,10 +20,10 @@
                   <span class="line line3"></span>
                  </div>
                  <ul class="menu-items">
-                     <li><a href="#">Home</a></li>
-                      <li><a href="#">About</a></li>
-                     <li><a href="#">Membership</a></li>
-                     <li><a href="#">Photos/Videos</a></li>
+                     <li><a href="index.html">Home</a></li>
+                      <li><a href="about.html">About</a></li>
+                     <li><a href="membership.html">Membership</a></li>
+                     <li><a href="photosvideos.html">Photos/Videos</a></li>
                      <li><a href="contactus.html">Contact us</a></li>
                  </ul>
                      <h1 class="logo">Maple Judo</h1>
