--- a/membership.html
+++ b/membership.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Membership</title>
+    <title>Programs</title>
     <!--CSS style sheet-->
     <link href="style.css" rel="stylesheet">
 
@@ -34,7 +34,7 @@
     <!--BANNER-->
 
     <div class="banner-area">
-        <h2>Membership</h2>
+        <h2>Programs</h2>
     </div>
     
     <!--CONTENT-->
