--- a/contactus.html
+++ b/contactus.html
@@ -22,7 +22,7 @@
                  <ul class="menu-items">
                      <li><a href="index.html">Home</a></li>
                       <li><a href="about.html">About</a></li>
-                     <li><a href="membership.html">Membership</a></li>
+                     <li><a href="membership.html">Programs</a></li>
                      <li><a href="photosvideos.html">Photos/Videos</a></li>
                      <li><a href="contactus.html">Contact us</a></li>
                  </ul>
