--- a/membership.html
+++ b/membership.html
@@ -42,7 +42,18 @@
         <div class="wrapper-body">
             <h3>BLABLABLA</h3>
             <p>
-             Testing 
+                <!--New content-->
+                
+             <ul style="float: left; min-width: 31.25rem; padding-top: 2rem;">
+                <li>Little ninja (2 years old)</li>
+                <li>Ninja (3 years old)</li>
+                <li>Samurai (4-5 years old)</li>
+                <li>Tall-Samourai (6-7 ans)</li>
+                <li>Beginner/Intermediates (8-12 years old)</li>
+                <li>Judo (Junior/Adults)</li>
+             </ul> 
+                <img src="Photos/schedule.png" alt="My Image" width="60%" height="60%" id="hp"> 
+                <!--New content end-->
             </p>
            
         </div>
