--- a/membership.html
+++ b/membership.html
@@ -40,7 +40,7 @@
     <!--CONTENT-->
     <div class="content-area">
         <div class="wrapper-body">
-            <h3>BLABLABLA</h3>
+            <h3>First class is free!</h3>
             <p>
                 <!--New content-->
                 
