--- a/membership.html
+++ b/membership.html
@@ -44,7 +44,7 @@
             <p>
                 <!--New content-->
                 
-             <ul style="float: left; min-width: 31.25rem; padding-top: 2rem;">
+             <ul style="float: left; min-width: 31.25rem;">
                 <li>Little ninja (2 years old)</li>
                 <li>Ninja (3 years old)</li>
                 <li>Samurai (4-5 years old)</li>
