--- a/membership.html
+++ b/membership.html
@@ -52,7 +52,7 @@
                 <li>Beginner/Intermediates (8-12 years old)</li>
                 <li>Judo (Junior/Adults)</li>
              </ul> 
-                <img src="Photos/schedule.png" alt="My Image" width="60%" height="60%" id="hp"> 
+                <img src="Photos/schedule.png" alt="schedule"> 
                 <!--New content end-->
             </p>
            
