--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <li>Judo involves no equipment or weapons of any sort.</li>
                 </ul>
 
-                  <div class="button"><a href="http://www.worldjudoday.com/en/WhatisJudo-57.html?" target="_blank" class="button">Learn more</a>
+                  <div class="button"><a href="http://www.worldjudoday.com/en/WhatisJudo-57.html?" target="_blank">Learn more</a>
                 </div> 
             <!--New content end-->
             
