--- a/index.html
+++ b/index.html
@@ -21,7 +21,16 @@
                  </div>
                  <ul class="menu-items">
                      <li><a href="index.html">Home</a></li>
-                      <li><a href="about.html">About</a></li>
+                       <!--DROPDOWN-->
+                      <div class="dropdown">
+                        <li><a href="">About</a></li>
+                        <i class="fa fa-caret-down"></i>
+                        <div class="dropdown-content">
+                            <a href="sensei.html">Sensei</a>
+                            <a href="ourdojo.html">Our dojo</a>
+                        </div>    
+                      </div>
+                     <!--DROPDOWN END-->
                      <li><a href="membership.html">Programs</a></li>
                      <li><a href="photosvideos.html">Photos/Videos</a></li>
                      <li><a href="contactus.html">Contact us</a></li>
