--- a/about.html
+++ b/about.html
@@ -41,8 +41,13 @@
     <div class="content-area">
         <div class="wrapper-body">
             <h3>BLABLABLA</h3>
+              <p>
+                <a href="maxraym.html">Max Raym</a>
+                <img class="imginstructors" src="Photos/blank-profile-picture-973460_1280.jpeg" alt="Blank photo">
+            </p>
             <p>
-             Testing 
+                <a href="megnag.html">Meg Nag</a>
+                <img class="imginstructors" src="Photos/blank-profile-picture-973460_1280.jpeg" alt="Blank photo">
             </p>
            
         </div>
