--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
     <!--CONTENT-->
     <div class="content-area">
         <div class="wrapper-body">
-            <h3>BLABLABLA</h3>
+            <h3>Instructors</h3>
               <p>
                 <a href="maxraym.html">Max Raym</a>
                 <img class="imginstructors" src="Photos/blank-profile-picture-973460_1280.jpeg" alt="Blank photo">
