--- a/megnag.html
+++ b/megnag.html
@@ -34,13 +34,13 @@
     <!--BANNER-->
 
     <div class="banner-area">
-        <h2>Meg Nag</h2>
+        <h2></h2>
     </div>
     
     <!--CONTENT-->
     <div class="content-area">
         <div class="wrapper-body">
-            <h3>BLABLABLA</h3>
+            <h3>Meg Raym</h3>
             <p>
              Testing 
             </p>
