--- a/membership.html
+++ b/membership.html
@@ -40,8 +40,10 @@
     <!--CONTENT-->
     <div class="content-area">
         <div class="wrapper-body">
-            <a href="contactus.html" First class is free!>
-            <h3></h3>
+            
+            <h3><
+                a href="contactus.html">First class is free</a>
+            </h3>
             
             <p>
                 <!--New content-->
