--- a/membership.html
+++ b/membership.html
@@ -41,8 +41,8 @@
     <div class="content-area">
         <div class="wrapper-body">
             
-            <h3><
-                a href="contactus.html">First class is free</a>
+            <h3>
+                <a href="contactus.html">First class is free</a>
             </h3>
             
             <p>
