--- a/contactus.html
+++ b/contactus.html
@@ -72,6 +72,7 @@
                   <div class="row">
                     <input type="submit" value="Submit">
                   </div>
+                    <input type="hidden" name="_next" value="thankyou.html">
                 </form>
               </div>
           
