--- a/contactus.html
+++ b/contactus.html
@@ -47,18 +47,18 @@
                 <form action="https://formsubmit.co/61da9edb6099cfd88912ba8cf096e2ac" method="POST">
                   <div class="row">
                     <div class="col-25">
-                      <label for="fname">First Name</label>
+                      <label for="fname">Full name</label>
                     </div>
                     <div class="col-75">
-                      <input type="text" id="fname" name="firstname" placeholder="Your name..">
+                      <input type="text" id="fname" name="firstname" placeholder="Full name..">
                     </div>
                   </div>
                   <div class="row">
                     <div class="col-25">
-                      <label for="lname">Last Name</label>
+                      <label for="lname">Email adress</label>
                     </div>
                     <div class="col-75">
-                      <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+                      <input type="text" id="lname" name="lastname" placeholder="Email adress.." required>
                     </div>
                   </div>
                   <div class="row">
