--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Maple Judo</title>
     <!--CSS style sheet-->
     <link href="style.css" rel="stylesheet">
+    <script src="function.js"></script>
 
 </head>
 <body>
