--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                      <li><a href="about.html">About</a></li>
                      <li><a href="membership.html">Programs</a></li>
                      <li><a href="photosvideos.html">Photos/Videos</a></li>
-                     <li><a href="contactus.html">Contact us</a></li>
+                     <li><a href="meettheteam.html">Contact us</a></li>
                  </ul>
                      <h1 class="logo">Maple Judo</h1>
                 </div>
