--- a/meettheteam.html
+++ b/meettheteam.html
@@ -139,7 +139,7 @@
 
 
 
-              <script src="function.js;"></script>
+              <script src="function.js"></script>
         </div>
     </div>
 
