--- a/meettheteam.html
+++ b/meettheteam.html
@@ -6,6 +6,9 @@
     <title>Maple Judo</title>
     <!--CSS style sheet-->
     <link href="style.css" rel="stylesheet">
+    <!--Json-->
+    <script src="function.js;"></script>
+
 </head>
 <body>
     <!--NAV BAR AND LOGO-->
@@ -139,7 +142,7 @@
 
 
 
-              <script src="function.js"></script>
+           
         </div>
     </div>
 
