--- a/meettheteam.html
+++ b/meettheteam.html
@@ -6,10 +6,8 @@
     <title>Maple Judo</title>
     <!--CSS style sheet-->
     <link href="style.css" rel="stylesheet">
-    <!--Json-->
-    <script src="function.js;"></script>
-
 </head>
+    
 <body>
     <!--NAV BAR AND LOGO-->
     <div class="wrapper">
@@ -146,5 +144,7 @@
         </div>
     </div>
 
+        <!--Json-->
+    <script src="function.js"></script>
 </body>
 </html>
