--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
                  </div>
                  <ul class="menu-items">
                      <li><a href="index.html">Home</a></li>
-                      <li><a href="about.html">About</a></li>
+                      <li><a href="meettheteam.html">About</a></li>
                      <li><a href="membership.html">Programs</a></li>
                      <li><a href="photosvideos.html">Photos/Videos</a></li>
                      <li><a href="contactus.html">Contact us</a></li>
