--- a/contactus.html
+++ b/contactus.html
@@ -26,7 +26,9 @@
                      <li><a href="photosvideos.html">Photos/Videos</a></li>
                      <li><a href="contactus.html">Contact us</a></li>
                  </ul>
-                     <h1 class="logo">Maple Judo</h1>
+                     <h1 class="logo"> <a class="social-icon" href="https://facebook.com" target="_blank">
+                      <ion-icon name="logo-facebook"></ion-icon>
+                    </a> Maple Judo</h1>
                 </div>
             </nav>
     </div>
@@ -81,5 +83,7 @@
         </div>
     </div>
 
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
