--- a/membership.html
+++ b/membership.html
@@ -63,7 +63,9 @@
             </p>
            
         </div>
-      <img src="Photos/schedule.png" alt="schedule"> 
+      <div class="schedule-img">
+          <img src="Photos/schedule.png" alt="schedule"> 
+      </div>    
     </div>
 
     
