--- a/membership.html
+++ b/membership.html
@@ -51,7 +51,7 @@
                 <!--New content-->
                 
 <div id="content">
-  <h1>Classese</h1>
+  <h1>Classes</h1>
 
   <ul class="timeline">
     <li class="event" data-date="7:00am - 07:45am">
