--- a/membership.html
+++ b/membership.html
@@ -54,27 +54,27 @@
   <h1>Classes</h1>
 
   <ul class="timeline">
-    <li class="event" data-date="9:00am - 09:30am">
+    <li class="event" data-date="9:00am - 09:45am">
       <h3>Little Ninja (2 years old)</h3>
       <p>Short interval training circuits to condition muscles and burn fat fast. Circuits may vary from centre to centre.</p>
     </li>
-    <li class="event" data-date="9:30am - 10:00am">
+    <!--<li class="event" data-date="9:30am - 10:00am">
       <h3>Ninja (3 years old)</h3>
       <p>Focuses on strength and endurance for the whole body and improves muscle tone. Instructor led.</p>    
     </li>
     <li class="event" data-date="10:00am - 10:45am">
       <h3>Samurai (4-5 years old)</h3>
       <p>A vigorous dance class to Latin music. Helps tone, shape and condition your body, burning up to 800 calories in one hour depending on how much you put in.</p>    
-    </li>
-    <li class="event" data-date="10:45am - 11:30am">
+    </li>-->
+    <li class="event" data-date="10:00am - 10:45am">
       <h3>Tall-Samurai (6-7 years old)</h3>
       <p>Active Me is an inclusive sports programme aimed at disabled people in Liverpool who experience barriers to doing physical activities and sport.</p>
     </li>
-    <li class="event" data-date="11:30am - 12:30pm">
+    <li class="event" data-date="10:45am - 11:45am">
       <h3>Beginner/Intermediates (8-12 years old)</h3>
       <p>A vigorous dance class to Latin music. Helps tone, shape and condition your body, burning up to 800 calories in one hour depending on how much you put in.</p>    
     </li>
-    <li class="event" data-date="12:30pm - 1:15pm">
+    <li class="event" data-date="12:00pm - 1:00pm">
       <h3>Judo (Junior/Adult)</h3>
       <p>A vigorous class using stationary bikes with weighted flywheel. Focuses on strength, endurance, intervals and recovery. Burns calories and shapes muscles. Instructor led.</p>    
     </li>
