--- a/maxraym.html
+++ b/maxraym.html
@@ -42,7 +42,36 @@
         <div class="wrapper-body">
             <h3>Max Raym</h3>
             <p>
-             Testing 
+             <ul>
+                 <li>2016-present : Olympic weightlifting - Provincial level athlete.</li>
+                 <li>2014 : Recognition in the House of Commons of New Brunswick</li>
+                 <li>2014 : Bronze Medal - Edmonton International</li>
+                 <li>2013 : Silver Medal - Omnium International Quebec</li>
+                 <li>2013 : Bronze Medalist - Ontario International</li>
+                 <li>2013 : Francophone Games - Nice, France</li>
+                 <li>2012 : Pan-Am National Team - Republic of El Salvador</li>
+                 <li>2012 : 5th place World Championship - Samoa, Polynesia</li>
+                 <li>2011 : Bronze Medalist - Starett Judo Cup International - New York, USA</li>
+                 <li>2011 : 7th place - Ocean State International - Rhode Island, USA</li>
+                 <li>2009, 2010 and 2011 : Pedro Judo Challenge - Bronze Medal, GOLD & 5th - Boston, USA</li>
+                 <li>2009, 2010, 2011, 2012 and 2013 : Champion in Eastern Canada</li>
+                 <li>2009, 2010, 2011, 2012 and 2013 : Atlantic Champion</li>
+                 <li>2009 : Francophone Games - Near East, Lebanon</li>
+                 <li>2009 : Silver Medalist - Canadian Championship</li>
+                 <li>2005, 2008 and 2009 : Bronze, Bronze and Silver Medalist - Cupa Belo Horizonte - Sao
+                     Paulo, Brazil</li>
+                 <li>2006 and 2007 : National Team - Germany</li>
+                 <li>2007 : Best competitor Judo NB</li>
+                 <li>2007 : Canadian Champion</li>
+                 <li>2007 : Best Overall Canadian Athlete by Judo Canada</li>
+                 <li>2007 : President Pitney Bowes Sports NB Sports Award</li>
+                 <li>2007 : National Team - Bremen and Berlin -Germany</li>
+                 <li>2006 : Best Male Athlete Judo NB</li>
+                 <li>2006: Bronze Medalist - Canadian Championship</li>
+                 <li>2006 : National Team - Berlin, Germany</li>
+                 <li>2005 : Bronze Medalist - Ontario International</li>
+                 <li>Provincial team of Judo New Brunswick for more than 15 years.</li>
+            
             </p>
            
         </div>
