--- a/meettheteam.html
+++ b/meettheteam.html
@@ -69,7 +69,9 @@
                 </div>
                 <div class="people__div people__div--info">
                     <h2 class="people__name">Maxime Raymond</h2>
-                    <p class="people__desc">Judo Black Belt <a href="maxraym.html">see more</a> </p>
+                    <p class="people__desc">
+                        Judo black belt and brazilian jiu jitsu purple belt 
+                        <a href="maxraym.html">see more</a> </p>
                 </div>
                 <div class="people__div people__div--name">
                     <h2 class="people-name">Maxime Raymond</h2>
