--- a/maxraym.html
+++ b/maxraym.html
@@ -42,7 +42,7 @@
     <!--CONTENT-->
     <div class="content-area">
         <div class="wrapper-body">
-            <h3>Max Raym</h3>
+            <h3>Max Raym- Results</h3>
 		<p>
              		<ul>
               		   <li>2014 : Recognition in the House of Commons of New Brunswick</li>
