--- a/maxraym.html
+++ b/maxraym.html
@@ -6,6 +6,7 @@
     <title>Instructors</title>
     <!--CSS style sheet-->
     <link href="style.css" rel="stylesheet">
+    <link href="css/all.css" rel="stylesheet">
 
 </head>
 <body>
