--- a/maxraym.html
+++ b/maxraym.html
@@ -45,8 +45,8 @@
         <div class="wrapper-body">
             <h3>Max Raym- Results</h3>
 		<p>
-             		<ul>
-              		   <li>2014: Recognition in the House of Commons of New Brunswick</li>
+             		<ul class="fa-ul">
+              		   <li><span class="fa-ul"><i class="fa-solid fa-trophy"></i></span>2014: Recognition in the House of Commons of New Brunswick</li>
               		   <li>2014: Bronze Medal- Edmonton International</li>
               		   <li>2013: Silver Medal- Omnium International Quebec</li>
               		   <li>2013: Bronze Medalist- Ontario International</li>
