--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
                      <li><a href="membership.html">Programs</a></li>
                      <li><a href="photosvideos.html">Photos/Videos</a></li>
                      <li><a href="contactus.html">Contact us</a></li>
+                     <li> <a class="social-icon" href="https://facebook.com" target="_blank">
+                      <ion-icon name="logo-facebook"></ion-icon>
+                    </a></li>
                  </ul>
                      <h1 class="logo"> <a class="social-icon" href="https://facebook.com" target="_blank">
                       <ion-icon name="logo-facebook"></ion-icon>
