--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
                  </ul>
                      <h1 class="logo"> <a class="social-icon" href="https://facebook.com" target="_blank">
                       <ion-icon name="logo-facebook"></ion-icon>
-                    </a>Maple Dojo</h1>
+                    </a>
+                         <a href="Colorlogonobackground.png"> 
+                             </h1>
+
                 </div>
             </nav>
     </div>
