--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                      <h1 class="logo"> <a class="social-icon" href="https://facebook.com" target="_blank">
                       <ion-icon name="logo-facebook"></ion-icon>
                     </a>
-                         <a href="Colorlogonobackground.png"> 
+                         <img src="Colorlogonobackground.png" width="2rem"> 
                              </h1>
 
                 </div>
