--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                      <h1 class="logo"> <a class="social-icon" href="https://facebook.com" target="_blank">
                       <ion-icon name="logo-facebook"></ion-icon>
                     </a>
-                         <img src="Colorlogonobackground.png" width="2rem"> 
+                         <ion-icon name="Colorlogonobackground.png"></ion-icon>
                              </h1>
 
                 </div>
