--- a/index.html
+++ b/index.html
@@ -26,11 +26,7 @@
                      <li><a href="photosvideos.html">Photos/Videos</a></li>
                      <li><a href="contactus.html">Contact us</a></li>
                  </ul>
-                     <h1 class="logo"> <a class="social-icon" href="https://facebook.com" target="_blank">
-                      <ion-icon name="logo-facebook"></ion-icon>
-                    </a>
-                         <ion-icon name="Colorlogonobackground.png"></ion-icon>
-                             </h1>
+                     <h1 class="logo">Restigouche Dojo</h1>
 
                 </div>
             </nav>
