--- a/megnag.html
+++ b/megnag.html
@@ -26,7 +26,7 @@
                      <li><a href="photosvideos.html">Photos/Videos</a></li>
                      <li><a href="contactus.html">Contact us</a></li>
                  </ul>
-                     <h1 class="logo">Maple Judo</h1>
+                     <h1 class="logo">Restigouche Dojo</h1>
                 </div>
             </nav>
     </div>
