--- a/membership.html
+++ b/membership.html
@@ -28,7 +28,7 @@
                  </ul>
                      <h1 class="logo"> <a class="social-icon" href="https://facebook.com" target="_blank">
                       <ion-icon name="logo-facebook"></ion-icon>
-                    </a> Maple Judo</h1>
+                    </a>Restigouche Dojo</h1>
                 </div>
             </nav>
     </div>
