--- a/meettheteam.html
+++ b/meettheteam.html
@@ -88,11 +88,11 @@
         
                 <ul id="description-options">
                   <li class="description-option">
-                    <h4>Premium</h4>
-                    <p class="description">What is Judo?</p>
-                    <p>79 hours of video tutorials</p>
-                    <p>23 real life exercises</p>
-                    <p>Certification of completeness</p>
+                    <h4>What is Judo></h4>
+                    <p class="description">"The gentle way"</p>
+                    <p>Judo is a modern martial art from Japan that was developed by Jigoro Kano in 1882.</p>
+                    <p>It has grown into a worldwide sport and recognized as an Olympic sport./p>
+                    <p></p>
                     <div class="description-button-container">
                       <button class="description-button" type="submit">See more</button>
                     </div>
@@ -106,7 +106,7 @@
                     <p>Certification of completeness</p>
                     <p><span class="advantage-1"><strong>Support in completing the exercises</strong></span></p>
                     <div class="description-button-container">
-                      <button class="description-button" type="submit">Select</button>
+                      <button class="description-button" type="submit">See more</button>
                     </div>
                   </li>
         
@@ -119,7 +119,7 @@
                     <p><span class="advantage-1"><strong>Support in completing the exercises</strong></span></p>
                     <p><span class="advantage-2"><strong>Help in finding the first job</strong></span></p>
                     <div class="description-button-container">
-                      <button class="description-button" type="submit">Select</button>
+                      <button class="description-button" type="submit">See more</button>
                     </div>
                   </li>
                 </ul>
