--- a/meettheteam.html
+++ b/meettheteam.html
@@ -91,7 +91,7 @@
                     <h4>What is Judo></h4>
                     <p class="description">"The gentle way"</p>
                     <p>Judo is a modern martial art from Japan that was developed by Jigoro Kano in 1882.</p>
-                    <p>It has grown into a worldwide sport and recognized as an Olympic sport./p>
+                    <p>It has grown into a worldwide sport and recognized as an Olympic sport.</p>
                     <p></p>
                     <div class="description-button-container">
                       <button class="description-button" type="submit">See more</button>
