--- a/meettheteam.html
+++ b/meettheteam.html
@@ -88,7 +88,7 @@
         
                 <ul id="description-options">
                   <li class="description-option">
-                    <h4>What is Judo></h4>
+                    <h4>What is Judo?</h4>
                     <p class="description">"The gentle way"</p>
                     <p>Judo is a modern martial art from Japan that was developed by Jigoro Kano in 1882.</p>
                     <p>It has grown into a worldwide sport and recognized as an Olympic sport.</p>
