--- a/meettheteam.html
+++ b/meettheteam.html
@@ -56,7 +56,7 @@
                   </div>
                   <div class="people__div people__div--info">
                       <h2 class="people__name">Megan Raymond</h2>
-                      <p class="people__desc">Judo Black Belt</p>
+                      <p class="people__desc">Judo Black Belt <br> NCCP# 6615715</p>
                   </div>
                   <div class="people__div people__div--name">
                       <h2 class="people-name">Megan Raymond</h2>
