--- a/meettheteam.html
+++ b/meettheteam.html
@@ -71,7 +71,8 @@
                     <h2 class="people__name">Maxime Raymond</h2>
                     <p class="people__desc">
                         Judo black belt and brazilian jiu jitsu purple belt 
-                        <a href="maxraym.html">see more</a> </p>
+                      <a href="http://www.worldjudoday.com/en/WhatisJudo-57.html?"><button class="description-button" type="submit" >See more</button></a>
+                    </p>
                 </div>
                 <div class="people__div people__div--name">
                     <h2 class="people-name">Maxime Raymond</h2>
