--- a/contactus.html
+++ b/contactus.html
@@ -74,7 +74,7 @@
                   <div class="row">
                     <input type="submit" value="Submit">
                   </div>
-                    <input type="hidden" name="_next" value="thankyou.html">
+                    <input type="hidden" name="_next" value="https://mr9822.github.io/thankyou">
                 </form>
               </div>
           
