--- a/meettheteam.html
+++ b/meettheteam.html
@@ -71,7 +71,7 @@
                     <h2 class="people__name">Maxime Raymond</h2>
                     <p class="people__desc">
                         Judo black belt and brazilian jiu jitsu purple belt 
-                      <a href="http://www.worldjudoday.com/en/WhatisJudo-57.html?"><button class="description-button" type="submit" >See more</button></a>
+                      <a href="maxraym.html">see more</a> 
                     </p>
                 </div>
                 <div class="people__div people__div--name">
@@ -95,7 +95,7 @@
                     <p>It has grown into a worldwide sport and recognized as an Olympic sport.</p>
                     <p></p>
                     <div class="description-button-container">
-                      <button class="description-button" type="submit">See more</button>
+                       <a href="http://www.worldjudoday.com/en/WhatisJudo-57.html?"><button class="description-button" type="submit" >See more</button></a>
                     </div>
                   </li>
         
