--- a/meettheteam.html
+++ b/meettheteam.html
@@ -95,7 +95,7 @@
                     <p>It has grown into a worldwide sport and recognized as an Olympic sport.</p>
                     <p></p>
                     <div class="description-button-container">
-                       <a href="http://www.worldjudoday.com/en/WhatisJudo-57.html?"><button class="description-button" type="submit" >See more</button></a>
+                       <a href="http://www.worldjudoday.com/en/WhatisJudo-57.html?" target="_blank"><button class="description-button" type="submit" >See more</button></a>
                     </div>
                   </li>
         
