--- a/maxraym.html
+++ b/maxraym.html
@@ -27,7 +27,7 @@
                      <li><a href="photosvideos.html">Photos/Videos</a></li>
                      <li><a href="contactus.html">Contact us</a></li>
                  </ul>
-                     <h1 class="logo"> <a class="social-icon" href="https://facebook.com" target="_blank">
+                     <h1 class="logo"> <a class="social-icon" href="https://www.facebook.com/profile.php?id=100087614255385" target="_blank">
                       <ion-icon name="logo-facebook"></ion-icon>
                     </a>Restigouche Dojo</h1>
                 </div>
