--- a/maxraym.html
+++ b/maxraym.html
@@ -43,7 +43,7 @@
     <!--CONTENT-->
     <div class="content-area">
         <div class="wrapper-body">
-            <h3>Max Raym- Results</h3>
+            <h3>Maxime Raymond- Results</h3>
 		<div class="achievement">
              		<ul>
               		   <li>
