--- a/megnag.html
+++ b/megnag.html
@@ -48,31 +48,31 @@
              		<ul>
               		   <li>
                      		 <span><i class="fa-solid fa-trophy"></i></span>
-                     		 <span>2014: Recognition in the House of Commons of New Brunswick</span>
+                     		 <span>2014: Bronze place: Continental Championships Juniors</span>
                   	  </li>
 			  <li>
                      		 <span><i class="fa-solid fa-trophy"></i></span>
-                     		 <span>2014: Bronze Medal- Edmonton International</span>
+                     		 <span>2014: Bronze Medal- Canadian Championships Saguenay</span>
                   	  </li>
 			  <li>
                      		 <span><i class="fa-solid fa-trophy"></i></span>
-                     		 <span>2013: Silver Medal- Omnium International Quebec</span>
+                     		 <span>2011: Silver Medal- Ontario International U20/span>
                   	  </li>
 			  <li>
                      		 <span><i class="fa-solid fa-trophy"></i></span>
-                     		 <span>2013: Bronze Medalist- Ontario International</span>
-                  	  </li>
-			                		   <li>
-                     		 <span><i class="fa-solid fa-trophy"></i></span>
-                     		 <span>2013: Francophone Games- Nice,France</span>
+                     		 <span>2010: Bronze Medal- Canadian Championships Jonquiere</span>
                   	  </li>
 			  <li>
                      		 <span><i class="fa-solid fa-trophy"></i></span>
-                     		 <span>2012: Pan-Am National Team-Republic of El Salvador</span>
+                     		 <span>2010: Bronze Medal- Canadian U20 Championships Lethbridge</span>
                   	  </li>
 			  <li>
                      		 <span><i class="fa-solid fa-trophy"></i></span>
-                     		 <span>2012: 5th place World Championship-Samoa,Polynesia</span>
+                     		 <span>2009: Bronze Medal- PQuebec Open U20 Montreal in 2009</span>
+                  	  </li>
+			  <li>
+                     		 <span><i class="fa-solid fa-trophy"></i></span>
+                     		 <span>2008: Bronze Medal- Ontario Open Toronto U17</span>
                   	  </li>
 			  
 			</ul>
