--- a/megnag.html
+++ b/megnag.html
@@ -56,7 +56,7 @@
                   	  </li>
 			  <li>
                      		 <span><i class="fa-solid fa-trophy"></i></span>
-                     		 <span>2011: Silver Medal- Ontario International U20/span>
+                     		 <span>2011: Silver Medal- Ontario International U20</span>
                   	  </li>
 			  <li>
                      		 <span><i class="fa-solid fa-trophy"></i></span>
