--- a/megnag.html
+++ b/megnag.html
@@ -68,7 +68,7 @@
                   	  </li>
 			  <li>
                      		 <span><i class="fa-solid fa-trophy"></i></span>
-                     		 <span>2009: Bronze Medal- PQuebec Open U20 Montreal in 2009</span>
+                     		 <span>2009: Bronze Medal- Quebec Open U20 Montreal in 2009</span>
                   	  </li>
 			  <li>
                      		 <span><i class="fa-solid fa-trophy"></i></span>
