--- a/meettheteam.html
+++ b/meettheteam.html
@@ -91,8 +91,8 @@
                   <li class="description-option">
                     <h4>What is Judo?</h4>
                     <p class="description">"The gentle way"</p>
-                    <p>Judo is a modern martial art from Japan that was developed by Jigoro Kano in 1882.</p>
-                    <p>It has grown into a worldwide sport and recognized as an Olympic sport.</p>
+                    <p>Jigoro Kano created the modern Japanese martial art of judo in 1882.</p>
+                    <p>It has developed into a global sport that is acknowledged as an Olympic sport.</p>
                     <p></p>
                     <div class="description-button-container">
                        <a href="http://www.worldjudoday.com/en/WhatisJudo-57.html?" target="_blank"><button class="description-button" type="submit" >See more</button></a>
