--- a/meettheteam.html
+++ b/meettheteam.html
@@ -112,15 +112,21 @@
                   </li>
         
                   <li class="description-option">
-                    <h4>Premium</h4>
-                    <p class="description">$4199</p>
-                    <p>79 hours of video tutorials</p>
-                    <p>23 real life exercises</p>
-                    <p>Certification of completeness</p>
-                    <p><span class="advantage-1"><strong>Support in completing the exercises</strong></span></p>
-                    <p><span class="advantage-2"><strong>Help in finding the first job</strong></span></p>
+                    <h4>Judo Moral Code</h4>
+                    <p>
+                        <ul>
+                         <li>Courage</li>
+                         <li>Respect</li>
+                         <li>Modesty</li>
+                         <li>Sincerity</li>
+                         <li>Friendship</li>
+                         <li>Honour</li>
+                         <li>Politeness</li>
+                         <li>Self control</li>
+                      </ul>
+                   </p>
                     <div class="description-button-container">
-                      <button class="description-button" type="submit">See more</button>
+                      <a href="https://www.ijf.org/moralcode" target="_blank"><button class="description-button" type="submit">See more</button></a>
                     </div>
                   </li>
                 </ul>
