--- a/meettheteam.html
+++ b/meettheteam.html
@@ -114,7 +114,8 @@
                   <li class="description-option">
                     <h4>Judo Moral Code</h4>
                     <p>
-                        <ol>
+                       <div class="moralcode">
+                             <ol>
                          <li>Courage</li>
                          <li>Respect</li>
                          <li>Modesty</li>
@@ -123,7 +124,8 @@
                          <li>Honour</li>
                          <li>Politeness</li>
                          <li>Self control</li>
-                      </ol>
+                            </ol>
+                      </div>
                    </p>
                     <div class="description-button-container">
                       <a href="https://www.ijf.org/moralcode" target="_blank"><button class="description-button" type="submit">See more</button></a>
