--- a/meettheteam.html
+++ b/meettheteam.html
@@ -121,15 +121,20 @@
                   </li>
         
                    <li class="description-option">
-                    <h4>Standard</h4>
-                    <p class="description">$2699</p>
-                    <p>79 hours of video tutorials</p>
-                    <p>23 real life exercises</p>
-                    <p>Certification of completeness</p>
-                    <p><span class="advantage-1"><strong>Support in completing the exercises</strong></span></p>
-                    <div class="description-button-container">
+                    <h4>Gross motos activity stations</h4>
+                       <p>
+                        <ol>
+                            <li>Pikler triangle<li>
+                            <li>Balance beam<li>
+                            <li>Stepping stones<li>
+                            <li>Rock climbing<li>
+                            <li>Gymnastics bar<li>
+                       </ol>
+                       
+                      </p>
+                    <!--<div class="description-button-container">
                       <button class="description-button" type="submit">See more</button>
-                    </div>
+                    </div>-->
                   </li>
                 </ul>
               </section>
