--- a/meettheteam.html
+++ b/meettheteam.html
@@ -102,8 +102,7 @@
                   <li class="description-option">
                       <h4><b>Judo Moral Code</b></h4>
                     <p>
-                       <div class="moralcode">
-                             <ol>
+                       <ol>
                          <li>Courage</li>
                          <li>Respect</li>
                          <li>Modesty</li>
@@ -112,8 +111,7 @@
                          <li>Honour</li>
                          <li>Politeness</li>
                          <li>Self control</li>
-                            </ol>
-                      </div>
+                      </ol>
                    </p>
                     <div class="description-button-container">
                       <a href="https://www.ijf.org/moralcode" target="_blank"><button class="description-button" type="submit">See more</button></a>
@@ -121,7 +119,7 @@
                   </li>
         
                    <li class="description-option">
-                       <h4><b>Gross motos activity stations</b></h4>
+                       <h4><b>Gross motors stations</b></h4>
                        <p>
                         <ol>
                             <li>Pikler triangle<li>
