--- a/meettheteam.html
+++ b/meettheteam.html
@@ -127,6 +127,7 @@
                             <li>Stepping stones<li>
                             <li>Rock climbing<li>
                             <li>Gymnastics bar<li>
+                            <li>More to come!</li>
                        </ol>
                        
                       </p>
