--- a/meettheteam.html
+++ b/meettheteam.html
@@ -119,7 +119,7 @@
                   </li>
         
                    <li class="description-option">
-                       <h4><b>Gross motors stations</b></h4>
+                       <h4><b>Gross motor stations</b></h4>
                        <p>
                         <ol>
                             <li>Pikler triangle<li>
