--- a/meettheteam.html
+++ b/meettheteam.html
@@ -119,14 +119,14 @@
                   </li>
         
                    <li class="description-option">
-                       <h4><b>Gross motor stations</b></h4>
+                       <h4><b>Gross motor activity stations</b></h4>
                        <p>
                         <ol>
-                            <li>Pikler triangle<li>
-                            <li>Balance beam<li>
-                            <li>Stepping stones<li>
-                            <li>Rock climbing<li>
-                            <li>Gymnastics bar<li>
+                            <li>Pikler triangle</li>
+                            <li>Balance beam</li>
+                            <li>Stepping stones</li>
+                            <li>Rock climbing</li>
+                            <li>Gymnastics bar</li>
                             <li>More to come!</li>
                        </ol>
                        
