--- a/photosvideos.html
+++ b/photosvideos.html
@@ -43,7 +43,7 @@
     <div class="content-area">
         <div class="wrapper-body">
             <h2>Media Gallery</h2>
-            <br><h1>COMING SOON</h1>
+            <br><h1>COMING SOON...</h1>
 <!--COMING SOON            
             <div class="gallery">
 
