--- a/meettheteam.html
+++ b/meettheteam.html
@@ -56,7 +56,8 @@
                   </div>
                   <div class="people__div people__div--info">
                       <h2 class="people__name">Megan Raymond</h2>
-                      <p class="people__desc">Judo Black Belt <br> NCCP# 6615715  <a href="megnag.html">see more</a></p>
+                      <p class="people__desc">Judo Black Belt <br> NCCP# 6615715  
+                          <a href="megnag.html">see more</a></p>
                   </div>
                   <div class="people__div people__div--name">
                       <h2 class="people-name">Megan Raymond</h2>
@@ -70,7 +71,7 @@
                 <div class="people__div people__div--info">
                     <h2 class="people__name">Maxime Raymond</h2>
                     <p class="people__desc">
-                        Judo black belt and brazilian jiu jitsu purple belt 
+                        Judo black belt and brazilian jiu jitsu purple belt. <br>NCCP# 1073218 
                       <a href="maxraym.html">see more</a> 
                     </p>
                 </div>
