--- a/meettheteam.html
+++ b/meettheteam.html
@@ -71,7 +71,7 @@
                 <div class="people__div people__div--info">
                     <h2 class="people__name">Maxime Raymond</h2>
                     <p class="people__desc">
-                        Judo black belt and brazilian jiu jitsu purple belt. <br>NCCP# 1073218 
+                        Judo black belt and brazilian jiu jitsu purple belt. NCCP# 1073218 
                       <a href="maxraym.html">see more</a> 
                     </p>
                 </div>
