--- a/maxraym.html
+++ b/maxraym.html
@@ -26,6 +26,11 @@
                      <li><a href="membership.html">Programs</a></li>
                      <li><a href="photosvideos.html">Photos/Videos</a></li>
                      <li><a href="contactus.html">Contact us</a></li>
+			                                           <div id="google_translate_element"></div><script type="text/javascript">
+                      function googleTranslateElementInit() {
+                        new google.translate.TranslateElement({pageLanguage: 'en', layout: google.translate.TranslateElement.InlineLayout.SIMPLE}, 'google_translate_element');
+                      }
+                      </script><script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
                  </ul>
                      <h1 class="logo"> <a class="social-icon" href="https://www.facebook.com/profile.php?id=100087614255385" target="_blank">
                       <ion-icon name="logo-facebook"></ion-icon>
