--- a/membership.html
+++ b/membership.html
@@ -56,7 +56,7 @@
                 <!--New content-->
                 
 <div id="content">
-  <h4>Classes</h4>
+  <h4>Classes - Sunday</h4>
 
   <ul class="timeline">
     <li class="event" data-date="9:00am - 09:45am">
