--- a/index.html
+++ b/index.html
@@ -54,9 +54,8 @@
            
                 <br> <div class="box">
                 <span></span>
-                <h5>REGISTRATION NOW OPEN- 2023</h5>
+                <h5>REGISTRATION COMING SOON-2023</h5>
               </div>
-            <br><h1>COMING SOON...</h1>
             <!--New content end-->
             
 
