--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
            
                 <br> <div class="box">
                 <span></span>
-                <h5>REGISTRATION Winter 2023</h5>
+                <h5>REGISTRATION COMING SOON</h5>
               </div>
             <!--New content end-->
             
