--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
                 <span></span>
                 <h5>REGISTRATION COMING SOON</h5>
               </div>
+            <h1>WINTER- 2023</h1>
             <!--New content end-->
             
 
