--- a/membership.html
+++ b/membership.html
@@ -56,21 +56,14 @@
                 <!--New content-->
                 
 <div id="content">
-  <h4>Classes - Sunday</h4>
-
+  <h4>Classes</h4>
+    <h1>TO BE DETERMINED</h1>
+<!--TO BE DETERMINED
   <ul class="timeline">
     <li class="event" data-date="9:00am - 09:45am">
       <h3>Little Ninja (2-4 years old)</h3>
       <p>Short interval training circuits to condition muscles and burn fat fast. Circuits may vary from centre to centre.</p>
     </li>
-    <!--<li class="event" data-date="9:30am - 10:00am">
-      <h3>Ninja (3 years old)</h3>
-      <p>Focuses on strength and endurance for the whole body and improves muscle tone. Instructor led.</p>    
-    </li>
-    <li class="event" data-date="10:00am - 10:45am">
-      <h3>Samurai (4-5 years old)</h3>
-      <p>A vigorous dance class to Latin music. Helps tone, shape and condition your body, burning up to 800 calories in one hour depending on how much you put in.</p>    
-    </li>-->
     <li class="event" data-date="10:00am - 10:45am">
       <h3>Tall-Samurai (4-6 years old)</h3>
       <p>Active Me is an inclusive sports programme aimed at disabled people in Liverpool who experience barriers to doing physical activities and sport.</p>
@@ -85,7 +78,7 @@
     </li>
   </ul>
 </div>
-
+-->
 
                 <!--New content end-->
 
