--- a/meettheteam.html
+++ b/meettheteam.html
@@ -57,7 +57,7 @@
       
               <div class="demo__div people">
                   <div class="people__div people__div--img">
-                      <img src="Photos/blank-profile-picture-973460_1280.jpeg" alt="" class="people__img">
+                      <img src="profilmax.jpg" alt="" class="people__img">
                   </div>
                   <div class="people__div people__div--info">
                       <h2 class="people__name">Megan Raymond</h2>
