--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
         
                 <ul id="description-options">
                   <li class="description-option">
-                      <h4><b>What is Judo?</b></h4>
-                    <p class="description">"The gentle way"</p>
+                      <h4><b>Our Dojo</b></h4>
+                    <p class="description">"Restigouche Dojo"</p>
                     <p>Jigoro Kano created the modern Japanese martial art of judo in 1882.</p>
                     <p>It has developed into a global sport that is acknowledged as an Olympic sport.</p>
                     <p></p>
