--- a/index.html
+++ b/index.html
@@ -97,6 +97,22 @@
                     <h2 class="people-name">Maxime Raymond</h2>
                 </div>
             </div>    
+		  <!--TRY-->
+		                <div class="demo__div people">
+                  <div class="people__div people__div--img">
+                      <img src="Photos/blank-profile-picture-973460_1280.jpeg" alt="" class="people__img">
+                  </div>
+                  <div class="people__div people__div--info">
+                      <h2 class="people__name">Megan Raymond</h2>
+                      <p class="people__desc">Judo Black Belt <br> NCCP# 6615715  
+                          <a href="megnag.html">see more</a></p>
+                  </div>
+                  <div class="people__div people__div--name">
+                      <h2 class="people-name">Megan Raymond</h2>
+                  </div>
+              </div>    
+		  <!--TRY-->
+		  
               </div>               
           </div>
 
