--- a/index.html
+++ b/index.html
@@ -57,13 +57,12 @@
                 <h5>REGISTRATION COMING SOON</h5>
               </div>
             <!--BOX END-->
-            <h1>WINTER- 2023</h1>
 		
 		
                         <!--New content-->
 
    <div class="pen-info">
-              <h1 class="pen-info__title">Instructors</h1>
+              <h1 class="pen-info__title">WINTER- 2023</h1>
           </div>
       
           <div class="demo">
