--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                           <a href="megnag.html">see more</a></p>
                   </div>
                   <div class="people__div people__div--name">
-                      <h2 class="people-name">Megan Raymond</h2>
+                      <h2 class="people-name">Our Dojo-Est.2022</h2>
                   </div>
               </div>          
       
