--- a/index.html
+++ b/index.html
@@ -72,12 +72,12 @@
                       <img src="Photos/blank-profile-picture-973460_1280.jpeg" alt="" class="people__img">
                   </div>
                   <div class="people__div people__div--info">
-                      <h2 class="people__name">Megan Raymond</h2>
+                      <h2 class="people__name">Established in 2022</h2>
                       <p class="people__desc">Judo Black Belt <br> NCCP# 6615715  
                           <a href="megnag.html">see more</a></p>
                   </div>
                   <div class="people__div people__div--name">
-                      <h2 class="people-name">Our Dojo-Est.2022</h2>
+                      <h2 class="people-name">Our Dojo</h2>
                   </div>
               </div>          
       
