--- a/index.html
+++ b/index.html
@@ -73,8 +73,7 @@
                   </div>
                   <div class="people__div people__div--info">
                       <h2 class="people__name">Established in 2022</h2>
-                      <p class="people__desc">Judo Black Belt <br> NCCP# 6615715  
-                          <a href="megnag.html">see more</a></p>
+                      <p class="people__desc">Adress:44 Salmon Blvd Campbellton, NB E3N 3T7</p>
                   </div>
                   <div class="people__div people__div--name">
                       <h2 class="people-name">Our Dojo</h2>
