--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       
               <div class="demo__div people">
                   <div class="people__div people__div--img">
-                      <img src="Photos/blank-profile-picture-973460_1280.jpeg" alt="" class="people__img">
+                      <img src="Photos/Est.2022.jpg" alt="" class="people__img">
                   </div>
                   <div class="people__div people__div--info">
                       <h2 class="people__name">Established in 2022</h2>
