--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                       <img src="Photos/Est.2022.jpg" alt="" class="people__img">
                   </div>
                   <div class="people__div people__div--info">
-                      <h2 class="people__name">Established in 2022</h2>
+                      <h2 class="people__name">Est. 2022</h2>
                       <p class="people__desc">Adress: 44 Salmon Blvd Campbellton, NB E3N 3T7</p>
                   </div>
                   <div class="people__div people__div--name">
@@ -82,17 +82,14 @@
       
               <div class="demo__div people">
                 <div class="people__div people__div--img">
-                    <img src="Photos/profilmax.jpg" alt="" class="people__img">
+                    <img src="Photos/ourmission.jpg" alt="" class="people__img">
                 </div>
                 <div class="people__div people__div--info">
-                    <h2 class="people__name">Maxime Raymond</h2>
-                    <p class="people__desc">
-                        Judo black belt and Brazilian Jiu Jitsu purple belt. NCCP# 1073218 
-                      <a href="maxraym.html">see more</a> 
-                    </p>
+                    <h2 class="people__name">Our Mission</h2>
+                    <p class="people__desc">Our mission is to spread the Kodokan Judo sport's fundamentals and lessons to people of all skill levels.</p>
                 </div>
                 <div class="people__div people__div--name">
-                    <h2 class="people-name">Maxime Raymond</h2>
+                    <h2 class="people-name">Our Mission</h2>
                 </div>
             </div>    
 		  <!--TRY-->
