--- a/index.html
+++ b/index.html
@@ -95,15 +95,14 @@
 		  <!--TRY-->
 		                <div class="demo__div people">
                   <div class="people__div people__div--img">
-                      <img src="Photos/blank-profile-picture-973460_1280.jpeg" alt="" class="people__img">
+                      <img src="Photos/upcomingevents.jpg" alt="" class="people__img">
                   </div>
                   <div class="people__div people__div--info">
-                      <h2 class="people__name">Megan Raymond</h2>
-                      <p class="people__desc">Judo Black Belt <br> NCCP# 6615715  
-                          <a href="megnag.html">see more</a></p>
+                      <h2 class="people__name">Upcoming events/h2>
+                      <p class="people__desc">To be determined</p>
                   </div>
                   <div class="people__div people__div--name">
-                      <h2 class="people-name">Megan Raymond</h2>
+                      <h2 class="people-name">Events</h2>
                   </div>
               </div>    
 		  <!--TRY-->
