--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                       <img src="Photos/upcomingevents.jpg" alt="" class="people__img">
                   </div>
                   <div class="people__div people__div--info">
-                      <h2 class="people__name">Upcoming events/h2>
+                      <h2 class="people__name">Upcoming events</h2>
                       <p class="people__desc">To be determined</p>
                   </div>
                   <div class="people__div people__div--name">
