--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     <img src="Photos/ourmission.jpg" alt="" class="people__img">
                 </div>
                 <div class="people__div people__div--info">
-                    <h2 class="people__name">Our Mission</h2>
+                    <h2 class="people__name">Mission</h2>
                     <p class="people__desc">Our mission is to spread the Kodokan Judo sport's fundamentals and lessons to people of all skill levels.</p>
                 </div>
                 <div class="people__div people__div--name">
