--- a/membership.html
+++ b/membership.html
@@ -55,30 +55,9 @@
          
                 <!--New content-->
                 
-<div id="content">
-  <h4>Classes</h4>
-    <h1>TO BE DETERMINED</h1>
-<!--TO BE DETERMINED
-  <ul class="timeline">
-    <li class="event" data-date="9:00am - 09:45am">
-      <h3>Little Ninja (2-4 years old)</h3>
-      <p>Short interval training circuits to condition muscles and burn fat fast. Circuits may vary from centre to centre.</p>
-    </li>
-    <li class="event" data-date="10:00am - 10:45am">
-      <h3>Tall-Samurai (4-6 years old)</h3>
-      <p>Active Me is an inclusive sports programme aimed at disabled people in Liverpool who experience barriers to doing physical activities and sport.</p>
-    </li>
-    <li class="event" data-date="10:45am - 11:45am">
-      <h3>Beginner/Intermediates (7-12 years old)</h3>
-      <p>A vigorous dance class to Latin music. Helps tone, shape and condition your body, burning up to 800 calories in one hour depending on how much you put in.</p>    
-    </li>
-    <li class="event" data-date="12:00pm - 1:00pm">
-      <h3>Judo (13+ Junior/Adult)</h3>
-      <p>A vigorous class using stationary bikes with weighted flywheel. Focuses on strength, endurance, intervals and recovery. Burns calories and shapes muscles. Instructor led.</p>    
-    </li>
-  </ul>
-</div>
--->
+               <div class="calendar">
+                 <img src="#" alt="Calendar" width="80%">
+                </div>
 
                 <!--New content end-->
 
