--- a/membership.html
+++ b/membership.html
@@ -56,7 +56,7 @@
                 <!--New content-->
                 
                <div class="calendar">
-                 <img src="Photos/calendar1.png" alt="Calendar" width="80%">
+                 <img src="Photos/Calendar2023.png" alt="Calendar2023" width="80%">
                 </div>
 
                 <!--New content end-->
