--- a/meettheteam.html
+++ b/meettheteam.html
@@ -101,7 +101,7 @@
                     <p>It has developed into a global sport that is acknowledged as an Olympic sport.</p>
                     <p></p>
                     <div class="description-button-container">
-                       <a href="http://www.worldjudoday.com/en/WhatisJudo-57.html?" target="_blank"><button class="description-button" type="submit" >See more</button></a>
+                       <a href="https://www.worldjudoday.com/en/WhatisJudo-57.html?" target="_blank"><button class="description-button" type="submit" >See more</button></a>
                     </div>
                    </li>
         
