--- a/contactus.html
+++ b/contactus.html
@@ -83,7 +83,7 @@
                 </form>
               </div>
           <!--GOODLE MAP-->
-           <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2669.1962232800324!2d-66.67411078497084!3d48.00991876802349!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4c98212bad884cfd%3A0x82ddbd1549d2fe06!2sCentre%20civique%20M%C3%A9morial%20Regional%20Civic%20Centre!5e0!3m2!1sen!2sca!4v1667769944043!5m2!1sen!2sca" width="80%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> -->
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2669.1962232800324!2d-66.67411078497084!3d48.00991876802349!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4c98212bad884cfd%3A0x82ddbd1549d2fe06!2sCentre%20civique%20M%C3%A9morial%20Regional%20Civic%20Centre!5e0!3m2!1sen!2sca!4v1667769944043!5m2!1sen!2sca" width="80%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             
            
         </div>
