--- a/membership.html
+++ b/membership.html
@@ -55,9 +55,9 @@
             <h2>Schedule coming soon.</h2>
                 <!--New content-->
                 
-               <!--<div class="calendar">
+               <div class="calendar">
                  <img src="Photos/schedule2023.png" alt="Calendar2023" width="80%">
-                </div> -->
+                </div>
 
                 <!--New content end-->
 
