--- a/membership.html
+++ b/membership.html
@@ -52,7 +52,7 @@
                 <a class="float-left" href="contactus.html">Click here for more info!</a>
             </h3>
             
-            <h2>Schedule coming soon.</h2>
+            <h2>Schedule Winter 2023</h2>
                 <!--New content-->
                 
                <div class="calendar">
