--- a/membership.html
+++ b/membership.html
@@ -49,7 +49,7 @@
         <div class="wrapper-body">
             
             <h3>
-                <a class="float-left" href="contactus.html">Click here for more info!</a>
+                <a class="float-left" href="contactus.html">Send us a message for more info!</a>
             </h3>
             
             <h2>Schedule Winter 2023</h2>
