--- a/meettheteam.html
+++ b/meettheteam.html
@@ -134,9 +134,9 @@
                        </ol>
                        
                       </p>
-                    <!--<div class="description-button-container">
-                      <button class="description-button" type="submit">See more</button>
-                    </div>-->
+                    <div class="description-button-container">
+                      <a href="https://judofanatics.com/blogs/news/why-choose-judo" target="_blank"><button class="description-button" type="submit">See more</button></a>
+                    </div>
                   </li>
                 </ul>
               </section>
